--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -3,9 +3,11 @@ RewriteEngine on
 
 RewriteRule ^masuk\.html$ login.php [L]
 RewriteRule ^dashboard\.html$ media.php?module=dashboard [L]
+RewriteRule ^profile\.html media.php?module=profile [L]
 RewriteRule ^daftar-guru\.html media.php?module=guru&act=list [L]
 RewriteRule ^input-guru\.html media.php?module=guru&act=add [L]
-RewriteRule ^edit-guru\.html media.php?module=guru&act=edit&id=$1 [L]
+
+RewriteRule ^daftar-nilai-guru\.html media.php?module=nilai&act=list [L]
 
 Options All -Indexes
 </IfModule>
